--- a/css/styles.css
+++ b/css/styles.css
@@ -1,47 +1,551 @@
-
-body, html {
-    margin: 0px auto;
-    padding: 0px;
-}
-
-header {
-  text-align: center;
-  background-size: cover;
-}
-
-.nav-text {
+a {
+  text-decoration: none;
+  list-style: none;
   color: white;
 }
 
+.overlay-link {
+  text-decoration: underline;
+}
 
-ul {
-  padding: 22px;
-  background: #0c4b26;
+.margin {
+  margin: 5px;
 }
-li {
-	font-size: 17px;
-  display: inline;
-  padding: 0px 110px 0px 10px;
-  }
-  li a{
-    text-decoration: none;
-  }
-  .float{
-    text-align: right;
-    }
- .left{
+
+.padder {
+  padding: 5px;
+}
+.sps-white {
+  color: white;
+}
+
+.sps-yellow {
+  background-color: #F9BF17;
+}
+
+.sps-green {
+  background-color: #0C4B26;
+}
+
+.sps-orange {
+  background-color: #F9BF17;
+}
+
+.sps-light-green {
+  background-color: #6B9354;
+}
   
-  width: 30%;
-  background-color: blue
- } 
- .right{
-  width: 70%;
-  background-color: red;
+.sps-greenish {
+  background-color: #90A747;
 }
-section{
-  width: 100%;
-   
+
+.top-bottom-padder {
+  padding: 20px 0;
 }
-div{
+
+.main-container .inner-container .right-margin {
+  margin-right: 40px;
+}
+
+.top-nav {
   float: left;
+  text-align: center;
 }
+
+.top-nav-50 {
+  float: right;
+  width: 50%;
+}
+
+.main-container .inner-container nav .top-nav-50 ul {
+  float: right;
+}
+
+.main-container .inner-container nav .top-nav-50 .marginer {
+  width: 110px;
+  text-transform: none;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 12pt;
+}
+
+hr {
+  margin: 0 auto;
+  width: 80%;
+}
+
+footer .main-container {
+  background-color: rgb(16,75,75);
+}
+
+.align-copyright {
+  text-align: right;
+}
+
+i.icons {
+  width: 18px;
+  height: 18px;
+  font-size: 20px;
+  color: rgb(16,75,75);
+  line-height: 18px;
+}
+
+.logo {
+  width: 90%;
+  height: auto;
+}
+
+html, body {
+  padding: 0;
+  margin: 0;
+}
+
+.main-container {
+  float: left;
+  width: 100%;
+}
+
+.inner-container {
+  margin: 0 auto;
+  width: 80%;
+}
+
+.main-container .inner-container .logo-container {
+  float: left;
+  width: 15%;
+}
+
+.main-container .inner-container section .title {
+  margin-left: 20px;
+  float: left;
+  width: 40.7%;
+}
+
+.main-container .inner-container section .search {
+  float: left;
+  width: 42.5%;
+  height: 175px;
+  display: flex;
+  align-items: center;
+}
+
+.main-container .inner-container section div textarea {
+  width: 60%;
+  height: 25px;
+}
+
+.main-container .inner-container section div button {
+  float: right;
+  margin-left: 5px;
+  height: 30px;
+  width: 28%;
+}
+
+.main-container .inner-container section div h1 {
+  font-family: 'PT Sans', sans-serif; 
+  font-weight: bold;
+  text-align: left;
+  font-size: 26pt;
+  margin-bottom: -20px;
+  margin-top: 50px;
+}
+
+.main-container .inner-container section div p {
+  font-family: 'PT Sans', sans-serif; 
+  text-align: left;
+  font-size: 18pt;
+  font-weight: 100;
+  margin: 0;
+
+}
+
+.main-container .inner-container nav {
+  width: 100%;
+}
+
+.main-container .inner-container nav ul {
+  padding: 0;
+  margin: 0 auto;
+  display: inline;
+}
+
+.main-container .inner-container nav li {
+  margin: 10px auto;
+  width: 16.666%;
+  float: left;
+  list-style: none;
+  font-family: 'PT Sans', sans-serif;
+  text-transform: uppercase;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 980px) {
+  .main-container .inner-container section .search {
+    width: 100%;
+  }
+
+  .main-container .inner-container section .title {
+    width: 100%;
+    margin: 0;
+  }
+
+  .main-container .inner-container nav .top-nav-50 {
+    width: 100%;
+  }
+
+  .main-container .inner-container nav li {
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+  }
+
+  .main-container .inner-container section div h1 {
+    font-size: 40pt;
+  }
+
+.main-container .inner-container section div p {
+    font-size: 20pt;
+  }
+
+  .main-container .inner-container nav .top-nav-50 ul {
+    float: none;
+  }
+
+  .main-container .inner-container nav .top-nav-50 .marginer {
+    width: 100%;
+    padding: 10px 0;
+  }
+}
+
+
+
+
+
+
+.image {
+  float: left;
+  background-image: url("http://www.freehdimages.in/uploads/large/background-hd-wallpaper-download.jpg");
+  background-size: cover;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  width: 100%;
+}
+
+.overlay-text {
+    width: 40%;
+    margin: 425px auto 30px 0;
+    background: rgba(0,0,0,0.5);
+    padding: 20px;
+}
+
+@media (min-width: 0px) and (max-width: 480px) {
+  .image {
+    min-height: 250px;
+  }
+
+  .overlay-text {
+    display: block;
+    width: 85%;
+    margin: 125px auto 35px auto;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 700px) {
+  .image {
+    min-height: 400px;
+  }
+
+  .overlay-text {
+    margin: 150px auto 60px auto;
+    width: 85%;
+  }
+}
+
+@media (min-width: 701px) and (max-width: 1000px) {
+  .image {
+    min-height: 600px;
+  }
+
+  .overlay-text {
+    width: 60%;
+    margin: 425px auto 50px 0;
+    background: rgba(0,0,0,0.5);
+    padding: 20px;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.boxes {
+  float: left;
+  width: 50%;
+}
+
+.main-container .inner-container h2 {}
+
+.main-container .inner-container .boxes h2 {
+  font-family: 'PT Sans', sans-serif;
+}
+
+.main-container .inner-container .boxes p {
+  font-family: 'PT Sans', sans-serif;
+}
+
+.main-container .inner-container .boxes button {
+  border: none;
+  text-decoration: none;
+  width: 250px;
+  height: 40px;
+  margin: 0 0 30px 5px;
+  font-size: 10pt;
+}
+
+.aboutStPatrick {
+  text-align: center;
+  font-family: 'PT Sans', sans-serif;
+  font-size: 30pt;
+  padding: 20px 0;
+}
+
+.button-center {
+  border: none;
+  text-decoration: none;
+  display: block;
+  margin: 20px auto 70px auto;
+  width: 250px;
+  height: 40px;
+  font-size: 10pt;
+}
+
+
+@media (max-width: 980px) {
+  .main-container .inner-container .boxes {
+    width: 100%;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer .main-container .inner-container div {
+  float: left;
+  width: 16.6666%;
+}
+
+footer .main-container .inner-container .flex-box {
+  width: 100%;
+  align-content: center;
+  display: flex;
+  padding: 20px 0;
+}
+
+footer .main-container .inner-container .footer-column h6 {
+  margin: 5px auto;
+  width: 100%;
+  text-align: left;
+  font-size: 14pt;
+  color: white;
+  font-family: 'PT Sans', sans-serif;
+}
+
+footer .main-container .inner-container .footer-column {
+  padding: 15px 0;
+}
+
+footer .main-container .inner-container .footer-column p {
+  width: 100%;
+  text-align: left;
+  margin: 5px 0;
+  color: white;
+  font-weight: 100;
+  font-size: 10pt;
+  font-family: 'PT Sans', sans-serif;
+}
+
+footer .main-container .inner-container .social {
+  float: left;
+  width: 50%;
+}
+
+footer .main-container .inner-container .social h6 {
+  font-size: 14pt;
+  width: 100%;
+  margin: 5px auto;
+  color: white;
+  font-family: 'PT Sans', sans-serif;
+}
+
+footer .main-container .inner-container .social p {
+  font-size: 10pt;
+  font-weight: 100;
+  width: 100%;
+  margin: 5px auto;
+  color: white;
+  text-align: right;
+  font-family: 'PT Sans', sans-serif;
+}
+
+footer .main-container .inner-container .footer-column a {
+  color: white;
+  text-decoration: none;
+  list-style: none;
+}
+
+footer .main-container .inner-container .footer-divider {
+  margin: 0 auto;
+  float: left;
+  width: 100%;
+  height: 1px;
+  background-color: white;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 980px) {
+  footer .main-container .inner-container .footer-column {
+    width: 33.333%;
+  }
+
+}
+
+
+@media (max-width: 480px) {
+  footer .main-container .inner-container .footer-column {
+    width: 50%;
+  }
+
+  footer .main-container .inner-container .social {
+    margin: 20px 0;
+    width: 100%;
+  }
+
+  footer .main-container .inner-container .social p {
+    text-align: left;
+  }
+
+  .align-copyright {
+    text-align: left;
+  }
+
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
