--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,12 @@ a {
 .padder {
   padding: 5px;
 }
+
+.line-padder {
+  padding: 30px;
+}
+}
+
 .sps-white {
   color: white;
 }
@@ -41,6 +47,10 @@ a {
 
 .top-bottom-padder {
   padding: 20px 0;
+}
+
+.top-spacer {
+  margin-top: 100px;
 }
 
 .main-container .inner-container .right-margin {
@@ -503,6 +513,77 @@ footer .main-container .inner-container .footer-divider {
 
   
 }
+
+/***************************************************************
+****************************************************************
+****************************************************************
+******************************About*****************************
+****************************************************************
+****************************************************************
+****************************************************************
+***************************************************************/
+
+.main-container .inner-container .text-section {
+  width: 75%;
+  float: left;
+}
+
+.main-container .inner-container .address-info {
+  width: 25%;
+  float: left;
+}
+
+.main-container .inner-container .about-sps {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 25pt;
+}
+
+.main-container .inner-container .about-sps-semi {
+  font-family: 'PT Sans', sans-serif;
+}
+
+.main-container .inner-container .about-sps-text {
+  font-family: 'PT Sans', sans-serif;
+}
+
+@media (max-width: 980px) {
+  .main-container .inner-container .text-section {
+    width: 100%;
+  }
+
+  .main-container .inner-container .address-info {
+    float: left;
+    width: 50%;
+  }
+
+  .text-section .line-padder {
+      padding: 0;
+    }
+
+  .top-spacer {
+    margin: 0;
+  }
+}
+
+/***************************************************************
+****************************************************************
+****************************************************************
+*****************************Calendar***************************
+****************************************************************
+****************************************************************
+****************************************************************
+***************************************************************/
+
+
+
+
+
+.main-container .inner-container .event-title {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 25pt;
+}
+
+
 
 
 
