--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,411 @@
+/*--------------------------------------------------------------
+# Header
+--------------------------------------------------------------*/
+header {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+header section {
+  width: 100%;
+}
+
+header ul {
+  margin: 0;
+}
+
+.top-navigation {
+  width: 83.3333%;
+  display: flex;
+  align-items: center;
+  min-height: 40px;
+  padding: 0;
+  margin: 0 auto;
+  justify-content: flex-end;
+  color: #fff;
+}
+
+.top-navigation ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.top-navigation-links {
+  min-width: 120px;
+  text-align: right;
+  text-decoration: none;
+  display: inline-block;
+  font-family: "PT Sans", Helvetica, sans-serif;
+  font-size: 18px;
+}
+
+.mid-navigation {
+  width: 83.33333%;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  flex-direction: row;
+  padding: 5px 0;
+}
+
+.header-title h1, .header-title p {
+  margin: 0;
+  font-family: "PT Sans", Helvetica, sans-serif;
+}
+
+.header-title h1 {
+  font-size: 32px;
+}
+
+@media all and (max-width: 980px) {
+  .header-title h1 {
+    font-size: 20px;
+  }
+
+  .header-title p {
+    font-size: 14px;
+  }
+}
+
+/*--------------------------------------------------------------
+## Header-MOBILE
+--------------------------------------------------------------*/
+@media (min-width: 240px) and (max-width: 640px) {
+
+  .top-navigation-links {
+    min-width: 75px;
+    font-size: 14px;
+  }
+
+  .mid-navigation {
+    flex-direction: column;
+  }
+}
+  /*--------------------------------------------------------------
+  ### Header-HAMBURGER
+  --------------------------------------------------------------*/
+@media (min-width: 240px) and (max-width: 960px) {
+  #hamburger {
+    width: 30px;
+    position: relative;
+    margin: 0 auto 0 0;
+    min-height: 20px;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+    float: left;
+  }
+
+  #hamburger span {
+    display: block;
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    background: #FFF;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+  }
+
+  #hamburger span:nth-child(1) {
+    top: 0px;
+  }
+
+  #hamburger span:nth-child(2), #hamburger span:nth-child(3) {
+    top: 8px;
+  }
+
+  #hamburger span:nth-child(4) {
+    top: 16px;
+  }
+
+  #hamburger.open span:nth-child(1) {
+    top: 8px;
+    width: 0%;
+    left: 50%;
+  }
+
+  #hamburger.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  #hamburger.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+
+  #hamburger.open span:nth-child(4) {
+    top: 8px;
+    width: 0%;
+    left: 50%;
+  }
+}
+
+/*--------------------------------------------------------------
+## Header-Search
+--------------------------------------------------------------*/
+
+.header-img {
+  width: 20%;
+}
+
+.header-img img {
+  width: 66%;
+}
+
+.header-title {
+  width: 30%;
+}
+
+.header-search {
+  width: 50%;
+  float: right;
+  display: flex;
+  align-items: center;
+  justify-content:flex-end;
+}
+
+.header-search textarea {
+  width: 60%;
+  height: 10px;
+  padding: 10px;
+  margin: 0;
+  border: 1px solid #0C4B26;
+  overflow: hidden;
+}
+
+textarea::-webkit-input-placeholder {
+  font-size: 12px;
+}
+
+textarea:-moz-placeholder { /* Firefox 18- */
+  vertical-align: center;
+  margin: 5px;
+}
+
+textarea::-moz-placeholder {  /* Firefox 19+ */
+  vertical-align: center;
+  margin: 5px;
+}
+
+textarea:-ms-input-placeholder {
+  vertical-align: center;
+  margin: 5px;
+}
+
+
+.header-search button {
+  width: 20%;
+  height: 30px;
+  padding: 0;
+  margin: 0 0 0 5px;
+  border: 1px solid #F9A91B;
+  cursor: pointer;
+}
+
+@media (min-width: 240px) and (max-width: 640px) {
+  .header-search textarea {
+    width: 75%;
+  }
+  .header-search button {
+    width: 25%;
+  }
+
+}
+
+/*--------------------------------------------------------------
+## Header-Bottom Navigation
+--------------------------------------------------------------*/
+
+.bottom-navigation {
+  width: 83.333333%;
+  margin: 0 auto;
+  display: flex;
+}
+
+.bottom-navigation ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 40px;
+  padding: 0;
+  margin: 0 auto;
+  flex: 1;
+}
+
+.bottom-navigation ul li {
+  min-width: 120px;
+  text-align: right;
+  text-decoration: none;
+  display: inline-block;
+  font-family: "PT Sans", Helvetica, sans-serif;
+  font-size: 18px;
+}
+
+.bottom-navigation ul li {
+  float: left;
+  text-align: left;
+}
+
+.bottom-navigation ul li:nth-child(4), .bottom-navigation ul li:nth-child(5),
+.bottom-navigation ul li:nth-child(6) {
+  float: right;
+  text-align: right;
+}
+
+.bottom-navigation.open {
+  opacity:1;
+  -webkit-transition:height 200ms ease-in;
+  -moz-transition:height 200ms ease-in;
+  -o-transition:height 200ms ease-in;
+  transition:height 200ms ease-in;
+}
+
+@media (min-width: 641px) and (max-width: 960px) {
+  .bottom-navigation ul li {
+    min-width: 80px;
+    font-size: 16px;
+  }
+
+  .bottom-navigation {
+    opacity:0;
+    clear: both;
+    height: 0px;
+    overflow: hidden;
+  }
+
+  .bottom-navigation.open {
+    height: 40px;
+  }
+
+}
+
+@media (min-width: 240px) and (max-width: 640px) {
+  .bottom-navigation ul li {
+    min-width: 80px;
+    font-size: 16px;
+    padding: 2px;
+  }
+
+  .bottom-navigation ul {
+    flex-direction: column;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  .bottom-navigation ul li, .bottom-navigation ul li:nth-child(4), .bottom-navigation ul li:nth-child(5),
+  .bottom-navigation ul li:nth-child(6) {
+    float: left;
+    text-align: center;
+  }
+
+  .bottom-navigation {
+    opacity:0;
+    clear: both;
+    height: 0px;
+    overflow: hidden;
+  }
+
+  .bottom-navigation.open {
+    height: 180px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+.flexbox-center {
+  display: flex;
+  align-items: center;
+}
+
+@media (min-width: 240px) and (max-width: 640px) {
+
+  .header-img {
+    width: 50%;
+    padding: 0;
+    text-align: center;
+  }
+
+  .header-img img {
+    width: 50%;
+    padding: 0;
+    margin: 0 auto;
+  }
+
+  .header-title {
+    width: 68%;
+    padding: 0;
+    text-align: center;
+  }
+
+  .header-title h1 {
+    font-size: 18px;
+    margin: 0;
+  }
+
+  .header-title p {
+    font-size: 14px;
+    margin: 0;
+  }
+
+  .header-search {
+    padding: 5px 0;
+    width: 100%;
+    justify-content:center;
+  }
+
+  .botnav {
+    opacity:0;
+    clear: both;
+    height: 0px;
+    overflow: hidden;
+  }
+
+  .botnav.open {
+    opacity:1;
+    height: 120px;
+    -webkit-transition:height 200ms ease-in;
+    -moz-transition:height 200ms ease-in;
+    -o-transition:height 200ms ease-in;
+    transition:height 200ms ease-in;
+  }
+}
+
+
+
+/*--------------------------------------------------------------
+# STYLING
+--------------------------------------------------------------*/
 
 .hide {
   display: none;
@@ -17,7 +425,6 @@
   }
 
 }
-
 
 a {
   text-decoration: none;
@@ -51,11 +458,11 @@ a {
 }
 
 .sps-black {
-  color: black;
+  color: #000;
 }
 
 .sps-white {
-  color: white;
+  color: #FFF;
 }
 
 .sps-yellow {
@@ -71,7 +478,7 @@ a {
 }
 
 .sps-orange {
-  background-color: #F9BF17;
+  background-color: #F9A91B;
 }
 
 .sps-light-green {
@@ -101,7 +508,20 @@ a {
 
 .top-nav {
   float: left;
-  text-align: center;
+}
+
+.top-nav-text {
+  width: 80%;
+  margin: 0;
+}
+
+.top-nav-text li {
+  text-align: right;
+}
+
+.top-nav-text li a{
+  font-size: 14px;
+  width: 33%;
 }
 
 .top-nav-50 {
@@ -158,7 +578,7 @@ html, body {
 
 .inner-container {
   margin: 0 auto;
-  width: 80%;
+  width: 83.3333333%;
 }
 
 .main-container .inner-container .logo-container {
@@ -214,8 +634,7 @@ html, body {
 
 .main-container .inner-container nav ul {
   padding: 0;
-  margin: 0 auto;
-  display: inline;
+  margin: 0;
 }
 
 .main-container .inner-container nav li {
@@ -401,14 +820,16 @@ html, body {
   float: left;
   background-image: url("http://www.freehdimages.in/uploads/large/background-hd-wallpaper-download.jpg");
   background-size: cover;
-  min-height: 100vh;
+  height: 400px;
+  background-position-y: center;
+  display: flex;
+  align-items: center;
   background-repeat: no-repeat;
   width: 100%;
 }
 
 .overlay-text {
   width: 40%;
-  margin: 425px auto 30px 0;
   background: rgba(0,0,0,0.5);
   padding: 20px;
 }
@@ -421,7 +842,6 @@ html, body {
   .overlay-text {
     display: block;
     width: 85%;
-    margin: 125px auto 35px auto;
   }
 }
 
@@ -431,19 +851,17 @@ html, body {
   }
 
   .overlay-text {
-    margin: 150px auto 60px auto;
     width: 85%;
   }
 }
 
 @media (min-width: 701px) and (max-width: 1000px) {
   .image {
-    min-height: 600px;
+    min-height: 400px;
   }
 
   .overlay-text {
     width: 60%;
-    margin: 425px auto 50px 0;
     background: rgba(0,0,0,0.5);
     padding: 20px;
   }
